--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "core-js": "^3.18.2",
     "fastify": "^3.22.0",
+    "js-cookie": "^3.0.1",
     "pg": "^8.7.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
